# ai-audio-journey

./: LICENSE  README.md  pyproject.toml
scripts/: hello.py  list_audio.py
